RESOLVED FIXED71912
Fixing build on MacOSX SL after 71838
https://bugs.webkit.org/show_bug.cgi?id=71912
Summary Fixing build on MacOSX SL after 71838
Alexandru Chiculita
Reported 2011-11-09 07:18:15 PST
I have the following error when building on MacOSX SL: Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm: In constructor ‘WebKit::TiledCoreAnimationDrawingArea::TiledCoreAnimationDrawingArea(WebKit::WebPage*, const WebKit::WebPageCreationParameters&)’: Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:54: error: setting a C++ non-POD object value is not implemented - assign the value to a temporary and use the temporary. cc1objplus: warnings being treated as errors Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:54: warning: left-hand operand of comma has no effect
Attachments
Patch (1.46 KB, patch)
2011-11-09 07:23 PST, Alexandru Chiculita
no flags
Alexandru Chiculita
Comment 1 2011-11-09 07:23:34 PST
Anders Carlsson
Comment 2 2011-11-09 09:54:31 PST
Comment on attachment 114272 [details] Patch I'd prefer static_cast over a C-style cast, but r=me anyway.
WebKit Review Bot
Comment 3 2011-11-09 10:41:30 PST
Comment on attachment 114272 [details] Patch Clearing flags on attachment: 114272 Committed r99735: <http://trac.webkit.org/changeset/99735>
WebKit Review Bot
Comment 4 2011-11-09 10:41:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.