Fixing build on MacOSX SL after 71838 https://bugs.webkit.org/show_bug.cgi?id=71912

Reviewed by Anders Carlsson.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::TiledCoreAnimationDrawingArea):


Canonical link: https://commits.webkit.org/88302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99735 268f45cc-cd09-0410-ab3c-d52691b4dbfc